// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;
using PopLume.Infrastructure.DataProvider.Context;

#nullable disable

namespace PopLume.Infrastructure.Migrations
{
    [DbContext(typeof(PopLumeDbContext))]
    partial class PopLumeDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.9")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("PopLume.Domain.Entities.Equipamento", b =>
                {
                    b.Property<Guid>("IdEquipamento")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<string>("Apelido")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.Property<DateOnly>("DataCompra")
                        .HasColumnType("date");

                    b.Property<DateTime?>("DataExclusao")
                        .HasColumnType("timestamp with time zone");

                    b.Property<bool>("Excluido")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("boolean")
                        .HasDefaultValue(false);

                    b.Property<int>("ExpectativaVida")
                        .HasColumnType("integer");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.Property<int>("Potencia")
                        .HasColumnType("integer");

                    b.Property<decimal>("ValorCompra")
                        .HasPrecision(10, 2)
                        .HasColumnType("numeric(10,2)");

                    b.Property<decimal>("ValorHora")
                        .ValueGeneratedOnAddOrUpdate()
                        .HasPrecision(10, 2)
                        .HasColumnType("numeric(10,2)")
                        .HasComputedColumnSql("CASE WHEN \"ExpectativaVida\" > 0 THEN \"ValorCompra\" / \"ExpectativaVida\" ELSE 0 END", true);

                    b.HasKey("IdEquipamento");

                    b.ToTable("Equipamento", (string)null);
                });

            modelBuilder.Entity("PopLume.Domain.Entities.Filamento", b =>
                {
                    b.Property<Guid>("IdFilamento")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<string>("Cor")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.Property<DateOnly>("DataCompra")
                        .HasColumnType("date");

                    b.Property<decimal>("Peso")
                        .HasPrecision(10, 2)
                        .HasColumnType("numeric(10,2)");

                    b.Property<string>("Tipo")
                        .IsRequired()
                        .HasMaxLength(10)
                        .HasColumnType("character varying(10)");

                    b.Property<decimal>("Valor")
                        .HasPrecision(10, 2)
                        .HasColumnType("numeric(10,2)");

                    b.HasKey("IdFilamento");

                    b.ToTable("Filamento", null, t =>
                        {
                            t.HasCheckConstraint("CK_Filamento_Tipo", "\"Tipo\" IN ('ABS', 'PETG', 'PLA', 'TPU')");
                        });
                });

            modelBuilder.Entity("PopLume.Domain.Entities.Marketplace", b =>
                {
                    b.Property<Guid>("IdMarketplace")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<DateTime?>("DataExclusao")
                        .HasColumnType("timestamp with time zone");

                    b.Property<bool>("Excluido")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("boolean")
                        .HasDefaultValue(false);

                    b.Property<string>("LinkLoja")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.HasKey("IdMarketplace");

                    b.ToTable("Marketplace", (string)null);
                });

            modelBuilder.Entity("PopLume.Domain.Entities.Produto", b =>
                {
                    b.Property<Guid>("IdProduto")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.Property<decimal>("PrecoCusto")
                        .HasPrecision(10, 2)
                        .HasColumnType("numeric(10,2)");

                    b.Property<decimal>("QuantidadeFilamento")
                        .HasPrecision(8, 2)
                        .HasColumnType("numeric(8,2)");

                    b.Property<int>("TempoImpressao")
                        .HasColumnType("integer");

                    b.HasKey("IdProduto");

                    b.ToTable("Produto", (string)null);
                });

            modelBuilder.Entity("PopLume.Domain.Entities.ProdutoComposicao", b =>
                {
                    b.Property<Guid>("IdProdutoComposicao")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<Guid?>("IdProdutoFilho")
                        .HasColumnType("uuid");

                    b.Property<Guid?>("IdProdutoPai")
                        .HasColumnType("uuid");

                    b.Property<int>("Quantidade")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasDefaultValue(1);

                    b.HasKey("IdProdutoComposicao");

                    b.HasIndex("IdProdutoFilho");

                    b.HasIndex("IdProdutoPai", "IdProdutoFilho")
                        .IsUnique();

                    b.ToTable("Produto_Composicao", (string)null);
                });

            modelBuilder.Entity("PopLume.Domain.Entities.TaxasMarketplace", b =>
                {
                    b.Property<Guid>("IdTaxa")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<decimal>("Comissao")
                        .HasPrecision(5, 2)
                        .HasColumnType("numeric(5,2)");

                    b.Property<Guid>("IdMarketplace")
                        .HasColumnType("uuid");

                    b.Property<decimal>("TaxaFixa")
                        .HasPrecision(10, 2)
                        .HasColumnType("numeric(10,2)");

                    b.Property<decimal>("ValorFinal")
                        .HasPrecision(10, 2)
                        .HasColumnType("numeric(10,2)");

                    b.Property<decimal>("ValorInicial")
                        .HasPrecision(10, 2)
                        .HasColumnType("numeric(10,2)");

                    b.HasKey("IdTaxa");

                    b.HasIndex("IdMarketplace");

                    b.ToTable("TaxasMarketplace", (string)null);
                });

            modelBuilder.Entity("PopLume.Domain.Entities.ProdutoComposicao", b =>
                {
                    b.HasOne("PopLume.Domain.Entities.Produto", "ProdutoFilho")
                        .WithMany("ComposicoesFilho")
                        .HasForeignKey("IdProdutoFilho")
                        .OnDelete(DeleteBehavior.Restrict);

                    b.HasOne("PopLume.Domain.Entities.Produto", "ProdutoPai")
                        .WithMany("ComposicoesPai")
                        .HasForeignKey("IdProdutoPai")
                        .OnDelete(DeleteBehavior.Cascade);

                    b.Navigation("ProdutoFilho");

                    b.Navigation("ProdutoPai");
                });

            modelBuilder.Entity("PopLume.Domain.Entities.TaxasMarketplace", b =>
                {
                    b.HasOne("PopLume.Domain.Entities.Marketplace", "Marketplace")
                        .WithMany("TaxasMarketplace")
                        .HasForeignKey("IdMarketplace")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Marketplace");
                });

            modelBuilder.Entity("PopLume.Domain.Entities.Marketplace", b =>
                {
                    b.Navigation("TaxasMarketplace");
                });

            modelBuilder.Entity("PopLume.Domain.Entities.Produto", b =>
                {
                    b.Navigation("ComposicoesFilho");

                    b.Navigation("ComposicoesPai");
                });
#pragma warning restore 612, 618
        }
    }
}
